ortho_config/tests/ui/invalid_cli_short.stderr
error: invalid `cli_short` '?': must be ASCII alphanumeric
 --> tests/ui/invalid_cli_short.rs:6:5
  |
6 |     field: String,
  |     ^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/ui/invalid_cli_short.rs:7:2
  |
7 | }
  |  ^ consider adding a `main` function to `$DIR/tests/ui/invalid_cli_short.rs`
